// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton renders correctly with type="block" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-efvoe1-StyledList {
  min-height: 200px;
  width: 100%;
  height: 100%;
  padding: 16px;
  border: 1px solid #e9eaeb;
  border-radius: 4px;
  margin: 0;
}

.cache-efvoe1-StyledList>.ez87ex11:not(:last-child) {
  border-bottom: 1px solid #d9dadd;
}

.cache-1udri31-StyledLine {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 24px 16px;
}

.cache-h21geo-IconSkeleton {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.cache-mhtdbo-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.cache-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e183x2r81"
  >
    <ul
      class="cache-efvoe1-StyledList ez87ex10"
    >
      <li
        class="cache-1udri31-StyledLine ez87ex11"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </li>
      <li
        class="cache-1udri31-StyledLine ez87ex11"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </li>
      <li
        class="cache-1udri31-StyledLine ez87ex11"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </li>
    </ul>
    <div
      class="cache-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="blocks" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-sprtbs-StyledContainer {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.cache-ay7hiz-Block {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  border: 1px solid #e9eaeb;
  border-radius: 4px;
  overflow: hidden;
}

.cache-h21geo-IconSkeleton {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.cache-mhtdbo-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.cache-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e183x2r81"
  >
    <div
      class="cache-sprtbs-StyledContainer esrnljb1"
    >
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
    </div>
    <div
      class="cache-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="box" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-sprtbs-StyledContainer {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.cache-1m8d80p-Block {
  height: 130px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-evenly;
  -ms-flex-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  justify-content: space-evenly;
  border: 1px solid #e9eaeb;
  border-radius: 4px;
  overflow: hidden;
}

.cache-h21geo-IconSkeleton {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.cache-mhtdbo-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.cache-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e183x2r81"
  >
    <div
      class="cache-sprtbs-StyledContainer e18cng8b1"
    >
      <div
        class="cache-1m8d80p-Block e18cng8b0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-1m8d80p-Block e18cng8b0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-1m8d80p-Block e18cng8b0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-1m8d80p-Block e18cng8b0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-1m8d80p-Block e18cng8b0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-1m8d80p-Block e18cng8b0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-1m8d80p-Block e18cng8b0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-1m8d80p-Block e18cng8b0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
    </div>
    <div
      class="cache-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="donut" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1mvslid-StyledSVG {
  height: 206px;
  width: 206px;
  -webkit-transform: rotate(-90deg);
  -moz-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.cache-g1cws9-StyledCircle {
  transform-origin: 50% 50%;
  stroke: #e9eaeb;
  stroke-width: 18;
  stroke-linecap: butt;
  fill: none;
}

.cache-1a6m9ou-LineList {
  display: grid;
  list-style: none;
  gap: 16px;
}

.cache-mhtdbo-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.cache-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e183x2r81"
  >
    <div
      class="cache-a1981g-StyledContainer e1bu753f3"
    >
      <svg
        class="cache-1mvslid-StyledSVG e1bu753f2"
      >
        <circle
          class="cache-g1cws9-StyledCircle e1bu753f1"
          cx="103"
          cy="103"
          r="90"
        />
      </svg>
      <ul
        class="cache-1a6m9ou-LineList e1bu753f0"
      >
        <li>
          <div
            class="cache-mhtdbo-Line e1denkbe0"
          />
        </li>
        <li>
          <div
            class="cache-mhtdbo-Line e1denkbe0"
          />
        </li>
        <li>
          <div
            class="cache-mhtdbo-Line e1denkbe0"
          />
        </li>
        <li>
          <div
            class="cache-mhtdbo-Line e1denkbe0"
          />
        </li>
      </ul>
    </div>
    <div
      class="cache-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="line" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-mhtdbo-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.cache-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e183x2r81"
  >
    <div
      class="cache-mhtdbo-Line e1denkbe0"
    />
    <div
      class="cache-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="list" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-1m2hi1y-StyledList {
  list-style: none;
  padding: 0;
  margin: 0;
}

.cache-1m2hi1y-StyledList>.e639qnr2:nth-of-type(even) {
  background-color: #f3f3f4;
}

.cache-1ldrf1m-StyledItem {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 48px;
  padding: 4px 8px;
}

.cache-vmfh4y-StyledLine {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-mhtdbo-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.cache-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e183x2r81"
  >
    <ul
      class="cache-1m2hi1y-StyledList e639qnr0"
    >
      <li
        class="cache-1ldrf1m-StyledItem e639qnr2"
      >
        <div
          class="cache-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="cache-mhtdbo-Line e1denkbe0"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="cache-mhtdbo-Line e1denkbe0"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="cache-mhtdbo-Line e1denkbe0"
          />
        </div>
      </li>
      <li
        class="cache-1ldrf1m-StyledItem e639qnr2"
      >
        <div
          class="cache-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="cache-mhtdbo-Line e1denkbe0"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="cache-mhtdbo-Line e1denkbe0"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="cache-mhtdbo-Line e1denkbe0"
          />
        </div>
      </li>
      <li
        class="cache-1ldrf1m-StyledItem e639qnr2"
      >
        <div
          class="cache-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="cache-mhtdbo-Line e1denkbe0"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="cache-mhtdbo-Line e1denkbe0"
          />
        </div>
        <div
          class="cache-vmfh4y-StyledLine e639qnr1"
        >
          <div
            class="cache-mhtdbo-Line e1denkbe0"
          />
        </div>
      </li>
    </ul>
    <div
      class="cache-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders correctly with type="slider" 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-1ibkrfq-StyledContainer {
  height: 277px;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
  overflow: auto;
}

.cache-yskav4-StyledCard {
  border: 1px solid #e9eaeb;
  border-radius: 4px;
  width: 239px;
  height: 261px;
  overflow: hidden;
}

.cache-hgkn6i-StyledBanner {
  border: 1px solid #e9eaeb;
  background-color: #e9eaeb;
  width: 100%;
  height: 33%;
}

.cache-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e183x2r81"
  >
    <div
      class="cache-1ibkrfq-StyledContainer e1yrvvrg2"
    >
      <div
        class="cache-yskav4-StyledCard e1yrvvrg1"
      >
        <div
          class="cache-hgkn6i-StyledBanner e1yrvvrg0"
        />
      </div>
      <div
        class="cache-yskav4-StyledCard e1yrvvrg1"
      >
        <div
          class="cache-hgkn6i-StyledBanner e1yrvvrg0"
        />
      </div>
      <div
        class="cache-yskav4-StyledCard e1yrvvrg1"
      >
        <div
          class="cache-hgkn6i-StyledBanner e1yrvvrg0"
        />
      </div>
      <div
        class="cache-yskav4-StyledCard e1yrvvrg1"
      >
        <div
          class="cache-hgkn6i-StyledBanner e1yrvvrg0"
        />
      </div>
    </div>
    <div
      class="cache-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;

exports[`Skeleton renders default variant 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-sprtbs-StyledContainer {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 16px;
}

.cache-ay7hiz-Block {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  border: 1px solid #e9eaeb;
  border-radius: 4px;
  overflow: hidden;
}

.cache-h21geo-IconSkeleton {
  margin-right: 8px;
  width: 32px;
  height: 32px;
  min-width: 32px;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.cache-mhtdbo-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #e9eaeb;
}

.cache-a7k45f-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #f9f9fa00,
      #f9f9fa4D,
      #f9f9fa66,
      #f9f9fa4D,
      #f9f9fa00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-a7k45f-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<div
    class="cache-bgbcvp-StyledContainer e183x2r81"
  >
    <div
      class="cache-sprtbs-StyledContainer esrnljb1"
    >
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
      <div
        class="cache-ay7hiz-Block esrnljb0"
      >
        <div
          class="cache-h21geo-IconSkeleton e1kubpd30"
        />
        <div
          class="cache-mhtdbo-Line e1denkbe0"
        />
      </div>
    </div>
    <div
      class="cache-a7k45f-StyledDiv e183x2r80"
    />
  </div>
</DocumentFragment>
`;
